--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -83,3 +83,7 @@ dialog[open].popup {
 .modalRef2::backdrop {
   background: transparent;
 }
+
+.list-avatar:not(:first-child) {
+  margin-left: -8px;
+}
