Upgrade filter by school and distance

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -103,6 +103,16 @@ dialog[open].popup {
   height: 2px;
 }
 
+.radius-range-track-0 {
+  background-color: #222222; 
+  height: 2px;
+}
+
+.radius-range-track-1 {
+  background-color: #ddd; 
+  height: 2px;
+}
+
 .leaflet-bottom,
 .leaflet-control,
 .leaflet-pane,
