Add advance post address input

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -107,7 +107,7 @@ dialog[open].popup {
     scroll-behavior: smooth;
   }
 
-  details[open] div {
+  details[open] .BiChevronDown {
     transform: rotate(180deg);
   }
 
